created two for loops, one for loop thru origin array, the other loop thru new array(origin arr without key number

--- a/practice14/practice14.html
+++ b/practice14/practice14.html
@@ -10,7 +10,14 @@
 
         function array_factor(givenArr) {
             var obj = {};
-            
+            for(var i=0; i<givenArr.length; i++){
+                obj.givenArr[i] = null;
+                var newArr = givenArr.splice(givenArr[i], 1);
+                for(var j=0; j<newArr.length; j++){
+
+                }
+
+            }
         }
     </script>
 </head>
